@@ -158,16 +158,12 @@ Namespace Config
                             dc.Close()
                         Loop
 
-                        .pnlDock.SuspendLayout(True)
-
+                        Startup.CreatePanels()
                         If File.Exists(App.Info.Settings.SettingsPath & "\" & App.Info.Settings.LayoutFileName) And My.Settings.ResetPanels = False Then
-                            Startup.CreatePanels()
                             .pnlDock.LoadFromXml(App.Info.Settings.SettingsPath & "\" & App.Info.Settings.LayoutFileName, AddressOf GetContentFromPersistString)
                         Else
-                            Startup.CreatePanels(True)
+                            Startup.SetDefaultLayout()
                         End If
-
-                        .pnlDock.ResumeLayout(True, True)
                     End With
                 Catch ex As Exception
                     App.Runtime.log.Error("LoadPanelsFromXML failed" & vbNewLine & ex.Message)
