@@ -772,6 +772,15 @@ Namespace My.Resources
         End Property
         
         '''<summary>
+        '''  Looks up a localized string similar to Are you sure you want to reset the panels to their default layout?.
+        '''</summary>
+        Friend ReadOnly Property strConfirmResetLayout() As String
+            Get
+                Return ResourceManager.GetString("strConfirmResetLayout", resourceCulture)
+            End Get
+        End Property
+        
+        '''<summary>
         '''  Looks up a localized string similar to Includes icons by [FAMFAMFAM].
         '''</summary>
         Friend ReadOnly Property strFAMFAMFAMAttribution() As String
