@@ -4,6 +4,9 @@
   Fixed PuTTY processes not closing on Vista and 7 with UAC enabled
   Updated DockPanel Suite from 2.2.0 to 2.3.1
   Fixed error if the mouse is clicked outside of the remote screen area of a VNC connection
+  Fixed flashing and red lines at bottom of the window on first run
+  Added View->Reset Layout menu item
+  Added F11 shortcut key to View->Full Screen
 
 1.62:
   Switched to VncSharp, an open source VNC component
